--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,12 @@ body{
     height: calc(100vh - var(--margin));
 }
 
+main{
+    background-image: url("../img/mine.jpg");
+    flex-grow: 1;
+    overflow-y: auto;
+}
+
 img{
     border-radius: 50%;
 }
@@ -83,7 +89,7 @@ img{
 }
 
 /* Font Awesome */
-.fa-solid{
+.fa-solid, .fa-regular{
     font-size: 25px;
     color: gray;
 }
