--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@ header, footer{
 }
 
 body{
-    background: linear-gradient(#009688 0 20%, #DBDBD3 20% 100%);
+    background-image: linear-gradient(#009688 0 20%, #DBDBD3 20% 100%);
     height: calc(100vh - var(--margin));
 }
 
@@ -35,6 +35,7 @@ main ul>*{
     max-width: 1200px;
     height: calc(100% - var(--margin));
     margin: var(--margin) auto;
+    box-shadow: 10px 10px 10px 0px rgba(0, 0, 0, 0.3);
     /* border: 1px solid black; */
 }
 
